# home-app

./: Cargo.toml  README.md
.github/workflows/: CI.yaml  build-release.yml  release.yml
home-api/: .gitignore  Cargo.toml  README.md  build.rs  home-api.db  input.css  package-lock.json  package.json  tailwind.config.js
home-api/migrations/: V1__init.sql  V2__users.sql  V3__user_sessions.sql  V4__sensor_hosts.sql  V5__sensor_data.sql  V6__sensor_schedule_unique.sql  V7__areas.sql
home-api/src/: api_error.rs  auth.rs  database.rs  main.rs  models.rs  sqlite_pool.rs  ssl.rs
home-api/src/database/: areas.rs  data_schedule.rs  mod.rs  sensors.rs  temp_data.rs  user_sessions.rs  users.rs
home-api/src/services/: http_client.rs  mod.rs  pairing_service.rs  scanner_service.rs  sensor_data_service.rs  sensor_service.rs
home-api/src/website/: areas.rs  data.rs  home.rs  login.rs  menu.rs  mod.rs  scanner.rs  sensors.rs
home-api/src/website/components/: alert.rs
home-api/src/website/data/: browse_data.rs  mod.rs  schedule.rs
home-api/src/website/system/: mod.rs  users.rs
home-api/templates/: base.html  error.html  home.html  scanner.html
home-api/templates/components/: alert.html  area-basic.html  area-chart.html  area.html  home-sensor-actions.html  menu.html  navbar.html  overview-sensor-actions.html  scanner-inner.html  scanner-progress-status.html  scanner-progress.html  scanner-result.html  scanner-sensor-actions.html  sensor-features-input.html  sensor-features.html  sensor-row.html  sensor-rows.html  sensor-table.html  sensor.html  temp-browse.html  user-row.html
home-api/templates/pages/: areas-inner.html  areas.html  data-browse-inner.html  data-browse.html  data-inner.html  data-schedule-inner.html  data-schedule.html  data.html  error-inner.html  error.html  home-inner.html  home.html  login-inner.html  login.html  scanner-content.html  scanner-inner.html  scanner-ws.html  scanner.html  sensor-edit-inner.html  sensor-edit.html  sensors-inner.html  sensors.html  system-inner.html  system.html  users-inner.html  users.html
home-common/: Cargo.toml
home-common/src/: lib.rs
home-consts/: Cargo.toml
home-consts/src/: lib.rs
home-models/: Cargo.toml
home-models/src/: lib.rs  models.rs
home-sensor/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  home-sensor.ino  my-data.h  my-dht.h  my-http.h  my-pairing.h  my-routes.h  my-server.h  my-store.h  my-wifi.h
home-sensor/.cargo/: config.toml
home-sensor/main/: Kconfig.projbuild  main.c  wifi.h
home-sensor/src/: data.h  dht.h  http.h  http.hpp  led_button.rs  main.rs  models.rs  routes.h  routes.hpp  server.h  services.hpp  storage.rs  wifi.h  wifi.rs
home-sensor/src/http/: mod.rs  status.rs
home-sensor/src/http/route/: index.rs  mod.rs  pair.rs  sensor.rs
home-sensor/src/routes/: dht.hpp  led.hpp  not-found.hpp  pair.hpp  route.hpp  sensor.hpp
home-sensor/src/services/: dht.hpp  led.hpp  pairing.hpp  sensor.hpp  server.hpp  service.hpp  wifi.hpp
home-sensor/src/stores/: pair.hpp  sensor.hpp  store.hpp
workflows/: release.yml
