[workspace]
members = ["home-api", "home-common"]
exclude = ["home-sensor"]
resolver = "2"

[workspace.dependencies]

axum = { version = "0.7.5", features = ["ws", "form"] }
askama = "0.12.1"
chrono = { version = "0.4", features = ["serde"] }
deadpool = { version = "0.12", features = ["serde"] }
deadpool-r2d2 = "0.4"
deref-derive = "0.1.0"
heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
hex = "0.4"
home-common = { path = "../home-common" }
hmac = "0.12"
jwt = "0.16"
pnet = "0.35.0"
r2d2_sqlite = { version = "0.24", features = ["bundled"] }
r2d2 = "0.8"
refinery = { version = "0.8", features = ["rusqlite"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.10"
tokio = { version = "1.38", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tower-livereload = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
urandom = "0.1"
# Optional dependencies
openssl = { version = "0.10", features = ["vendored"] }
