[package]
name = "home-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
askama = { workspace = true }
chrono = { workspace = true }
deref-derive = { workspace = true }
heapless = { workspace = true }
home-common = { path = "../home-common" }
pnet = { workspace = true }
r2d2_sqlite = { workspace = true }
r2d2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-livereload = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Optional dependencies
openssl = { workspace = true, optional = true }

[features]
vendored = ["openssl"]
