[package]
name = "home-sensor"
version = "0.1.0"
authors = ["PetoMPP <piotreq22@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
# TODO: Explain
resolver = "2"

# TODO: Explain
[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 3
[profile.dev]
lto = "off"

[dependencies]
critical-section = { version = "1.1.2" }
embedded-io = "0.6.1"
esp-hal = { version = "0.18.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.12.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.1", features = ["esp32c3", "uart", "log"] }
esp-wifi = { version = "0.6.0", features = [
    "esp32c3",
    "wifi-default",
    "utils",
    "phy-enable-usb",
    "smoltcp",
] }
heapless = { version = "0.8.0", default-features = false }
home-consts = { path = "../home-consts" }
itoa = { version = "1.0.11" }
log = { version = "0.4.21" }
ryu = { version = "1.0.18" }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
